<resources>
    <string name="app_name">BudgetControl</string>
    <string name="balance">Баланс</string>
    <string name="income">Дохід</string>
    <string name="costs">Витрати</string>
    <string name="target">Ціль</string>
    <string name="is_left">залишилось</string>
    <string name="contribution">внесок</string>
    <string name="to_confirm">підтвердити</string>
    <string name="default_date">01.04.2021</string>
    <string name="income_costs_value_placeholder">%s %.1f</string>
    <string name="income_costs_value_with_grivnas_placeholder">%s %.1f грн.</string>
    <string name="fifty_fifty">5050</string>
    <string name="to_record">записати</string>
    <string name="source">джерело</string>
    <string name="costs_edit_text_hint">на що</string>
    <string name="target_description">опис цілі</string>
    <string name="from">З</string>
    <string name="till">По</string>
    <string name="you_want_to_cancel_contribution">Ви дійсно хочете відмінити вклад ?</string>
    <string name="you_achieve_goal">Вітаємо !!! Ви досягли цілі. Почати знову ?</string>
    <string name="gauss_numbers_are_collected">Вітаємо !!! 5050 грн. зібрано. Почати з початку?</string>
    <string name="how_collect_money_header">Як накопичувати гроші ?</string>
    <string name="how_collect_money_info_text">В основі будь-якого накопичення лежить фінансове планування: необхідно вести облік витрат і доходів, прогнозувати майбутні надходження і витрати, навчитися думати наперед. Спочатку потрібно поставити собі чітку фінансову мету. Користуватися простими, але перевіреними часом системами планування та обліку фінансів, які допоможуть дійти до поставленої мети.</string>
    <string name="six_jugs_method_header">Метод «шести глечиків»</string>
    <string name="six_jugs_method_info_text">Відповідно до цього методу, всі грошові надходження діляться на шість категорій: на життя, накопичення, розваги, освіту, великі покупки і подарунки. Витрачати їх можна тільки відповідно до призначення категорії.</string>
    <string name="latte_effect_header">«Ефект латте»</string>
    <string name="latte_effect_info_text">Метод «ефект латте» в черговий раз демонструє, як невелика, але послідовна щоденна економія може дати великий фінансовий результат.</string>
    <string name="four_envelopes_method_header">Метод «чотирьох конвертів»</string>
    <string name="four_envelopes_method_info_text">Метод «чотирьох конвертів» будується на потижнево плануванні сімейних витрат після того, як з доходів відкладені необхідні суми на фінансові цілі. \n\nСпочатку підрахувати загальну суму доходів сім\'ї за місяць. Потім відняти від неї гроші на середньострокові і довгострокові фінансові цілі (від 5 до 20%) і «покласти» їх в скарбничку.  Із залишку потрібно відняти гроші на повторювані з місяця в місяць витрати (платежі по кредитах, комунальні послуги, бензин і т. д.).</string>
    <string name="four_envelopes_method_second_info_text">Решту суми ділимо на чотири частини і кладемо в чотири конверта: це ваш бюджет на тиждень. Гроші з тижневого конверта можна витрачати як завгодно, головне - не перевищувати виділеного ліміту.</string>
    <string name="budget">Бюджет</string>
    <string name="information">Інформація</string>
    <string name="edit">edit</string>
    <string name="info">info</string>
    <string name="method_essence_header">Суть даного способу:</string>
    <string name="method_essence_info_text">На екрані розташовані цифри від 1 до 100. Якщо скласти всі ці числа між собою, у нас вийде 5050 - сума, яку ми будемо накопичувати. Тепер беремо скарбничку і тоді, коли ми будемо складати в неї - викреслюємо це ж число. \nЕксперимент продовжуємо до тих пір, поки не викреслимо всі числа.</string>
</resources>